# aula19-bootcamp-python

./: README.md  database.py  main.py  models.py  pyproject.toml  schema.py
